<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="300dp"
    android:id="@+id/mainLayout">

    <Button
        android:id="@+id/button1"
        android:layout_width="5dp"
        android:layout_height="5dp"
        android:layout_margin="1dp"
        android:background="@drawable/black_circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView" />

    <Button
        android:id="@+id/button2"
        android:layout_width="5dp"
        android:layout_height="5dp"
        android:layout_margin="1dp"
        android:background="@drawable/black_circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="5dp"
        android:layout_height="5dp"
        android:layout_margin="1dp"
        android:background="@drawable/black_circle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView" />

    <Button
        android:id="@+id/button4"
        android:layout_width="5dp"
        android:layout_height="5dp"
        android:layout_margin="1dp"
        android:background="@drawable/black_circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:layoutDirection="ltr"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:background="#2B2B2B">

            <TextView
                android:id="@+id/ReleaserTitleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="סיכום מידע מחסן 3:"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.033" />

            <TextView
                android:id="@+id/packageAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/amountofpackage"
                android:textColor="@color/white"
                android:textSize="14dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="@+id/guideline4" />

            <TextView
                android:id="@+id/inspected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textColor="@color/white"
                android:text="@string/amountofinspected"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/packageTypeAmount" />

            <TextView
                android:id="@+id/releaserAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/white"
                android:text="@string/amountofreleaser"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/inspected" />

            <TextView
                android:id="@+id/openingStrapType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/amountof"
                android:textStyle="bold"
                android:textColor="@color/white"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/releaserAmount" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.91" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.13" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:textColor="@color/white"
                android:text="100 מארזים"
                android:textSize="14dp"
                app:layout_constraintBottom_toBottomOf="@+id/packageAmount"
                app:layout_constraintEnd_toStartOf="@+id/packageAmount"
                app:layout_constraintTop_toTopOf="@+id/packageAmount"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:layout_marginEnd="5dp"
                android:text="100 מבוקרים"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/inspected"
                app:layout_constraintEnd_toStartOf="@+id/inspected"
                app:layout_constraintTop_toTopOf="@+id/inspected"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/packageTypeAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="Type"
                android:textSize="14dp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/packageAmount" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Type"
                android:textSize="14dp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/releaserAmount" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="TextView"
                android:textSize="14dp"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/releaserAmount"
                app:layout_constraintEnd_toStartOf="@+id/releaserAmount"
                app:layout_constraintTop_toTopOf="@+id/releaserAmount"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="TextView"
                android:textSize="14dp"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/openingStrapType"
                app:layout_constraintEnd_toStartOf="@+id/openingStrapType"
                app:layout_constraintTop_toTopOf="@+id/openingStrapType"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Type"
                android:textSize="14dp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/openingStrapType" />

            <Button
                android:id="@+id/exitButton"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_stroke"
                android:text="יציאה"
                android:layout_marginBottom="5dp"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>